<resources>
    <string name="app_name">ScriptureDude</string>
    <string name="welcome_prompt">What is your favorite scripture?</string>
    <string name="label_book">Book</string>
    <string name="label_chapter">Chapter</string>
    <string name="label_verse">Verse</string>
    <string name="button_view">View</string>
    <string name="text_blank"></string>
    <string name="button_save">Save Scripture</string>
    <string name="button_load">Load Scripture</string>
</resources>
